# embedded_projects

./: .clang-format  CMakeLists-example.txt  README.md
include/: atmega2560.h
make_led_blink/: CMakeLists.txt  make_led_blink.c
make_led_blink/.cache/clangd/index/: make_led_blink.c.6A33B9AC6755A1F7.idx
